# c_torch

./: .gitignore  CMakeLists.txt  README.md
include/: tensor.h
src/: main.cpp  tensor.cpp
tests/: tests.cpp
